Bug #26207: When making the key image to use  in index search MySQL was not explicitly  suppressing warnings. And if the context  happens to enable warnings (e.g. INSERT ..  SELECT) the warnings resulting from converting  the data the key is compared to are  reported to the client.  Fixed by suppressing warnings when converting  the data to the same type as the key parts.